début page commande

--- a/commande.html
+++ b/commande.html
@@ -94,19 +94,19 @@
         <div>
           <ul>
             <li>
-              <p>Article 1 | 10€99</p>
+              <p>Strike | 16€99</p>
             </li>
             <li>
-              <p>Article 2 | 10€99</p>
+              <p>7Wonders | 36€99</p>
             </li>
             <li>
-              <p>Article 3 | 10€99</p>
+              <p>Dobble | 14€99</p>
             </li>
           </ul>
-          <p>Total : 32€97</p>
-          <button class="btn" type="submit">Commander</button>
+          <p>Total : 68€97</p>
+          <a href="commande.html" target="_blank"><button class="btn2">commande</button></a>
         </div>
-
+        
       </div>
     </div>
 
@@ -150,7 +150,7 @@
     </button>
 
     <div class="titre text-center mt-5 text-white">
-      <h1>Jeux de dés</h1>
+      <h1>Mon panier</h1>
     </div>
 
     <div class="listcard1 text-center d-flex row justify-content-center mt-4">
@@ -166,60 +166,6 @@
           <a href="#" class="btn3 text-dark">Voir Plus</a>
         </div>
       </div>
-
-
-      <div class="card border-4 p-2 mb-5 mx-4">
-        <img src="img/jeuxdedes/yahtzee1.jpeg" class="card-img-top" alt="Image Yatzee">
-        <div class="card-body">
-          <h5 class="card-title text-white">Yatzee</h5>
-          <p class="card-text text-white">Jeu de société | Dès 8 ans | 2 à 8 joueurs
-            | 30 min</p>
-          <p>20€26</p>
-          <a href="#" class="btn3 text-dark">Voir Plus</a>
-        </div>
-      </div>
-
-
-      <div class="card border-4 p-2 mb-5 mx-4">
-        <img src="img/jeuxdedes/dice force1.jpeg" class="card-img-top" alt="Image 7wonders">
-        <div class="card-body">
-          <h5 class="card-title text-white">Dice Force</h5>
-          <p class="card-text text-white">Jeu de société | Dès 10 ans | 2
-            à 4
-            joueurs | 30 min à 1 heure</p>
-          <p>42€95</p>
-          <a href="#" class="btn3 text-dark">Voir Plus</a>
-        </div>
-      </div>
-
-      <br>
-
-      <div class="card border-4 p-2 mb-5 mx-4">
-        <img src="img/jeuxdedes/qwixx1.jpeg" class="card-img-top" alt="Image 7wonders">
-        <div class="card-body">
-          <h5 class="card-title text-white">Qwixx</h5>
-          <p class="card-text text-white">Jeu de société | Dès 8 ans | 2
-            à 5
-            joueurs | 15 min</p>
-          <p>16€99</p>
-          <a href="#" class="btn3 text-dark">Voir Plus</a>
-        </div>
-      </div>
-
-
-      <div class="card border-4 p-2 mb-5 mx-4">
-        <img src="img/jeuxdedes/perudo1.jpeg" class="card-img-top" alt="Image 7wonders">
-        <div class="card-body">
-          <h5 class="card-title text-white">Perudo</h5>
-          <p class="card-text text-white">Jeu de société | Dès 8 ans | 2
-            à 6
-            joueurs | 30 minutes</p>
-          <p>19€40</p>
-          <a href="#" class="btn3 text-dark">Voir Plus</a>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <div class="b-example-divider"></div>
   <div class="container">
