--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </li>
           </ul>
           <p>Total : 68€97</p>
-          <button class="btn2" href="commande.html">commande</button>
+          <a href="commande.html" target="_blank"><button class="btn2">commande</button></a>
         </div>
         
       </div>
