page panier card

--- a/commande.html
+++ b/commande.html
@@ -155,17 +155,26 @@
 
     <div class="listcard1 text-center d-flex row justify-content-center mt-4">
       <div class="card border-4 p-2 mb-5 mx-4">
-        <a href="unjeudedes.html" target="_blank"><img src="img/jeuxdedes/strike.jpeg" class="card-img-top"
-            alt="Image Strike"></a>
+  
         <div class="card-body">
-          <h5 class="card-title text-white">Strike</h5>
-          <p class="card-text text-white">Jeu d'ambiance | Dès 8 ans | 2
-            à 5
-            joueurs | 15 min</p>
-          <p>16€99</p>
-          <a href="#" class="btn3 text-dark">Voir Plus</a>
+          <h5 class="card-title text-white">Articles</h5>
+          <p class="card-text text-white">Quantité</p>
+          <p>Total</p>
+      <p></p>
         </div>
       </div>
+
+      <div class="listcard1 text-center d-flex row justify-content-center mt-4">
+        <div class="card border-4 p-2 mb-5 mx-4">
+    
+          <div class="card-body">
+            <h5 class="card-title text-white"> 3 Articles</h5>
+            <p class="card-text text-white">Sous-total</p>
+            <p>Livraison</p>
+            <a href="#" class="btn3 text-dark"> Commander</a>
+          </div>
+        </div>
+
 
   <div class="b-example-divider"></div>
   <div class="container">
