hyperlien page commande unifié

--- a/Jeux-de-des.html
+++ b/Jeux-de-des.html
@@ -104,7 +104,7 @@
             </li>
           </ul>
           <p>Total : 32€97</p>
-          <button class="btn" type="submit">Commander</button>
+          <a href="commande.html" target="_blank"><button class="btn2">commande</button></a>
         </div>
 
       </div>
