--- a/contact.html
+++ b/contact.html
@@ -16,103 +16,104 @@
 
     <header>
         <nav class="navbar navbar-expand-lg">
-            
-                <a class="navbar-brand" href="#">
-                    <img class="logo" src="img/logo2.JPG">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">ACCUEIL</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                JEUX
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="jeux-de-des.html" target="_blank" class="dropdown-item">Jeux de dés</a>
-                                </li>
-                                <li><a class="dropdown-item" href="jeux-de-cartes.html" target="_blank">Jeux de
-                                        cartes</a></li>
-                                <li><a class="dropdown-item" href="jeux-de-plateau.html" target="_blank">Jeux de
-                                        plateaux</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                PROMOS
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
-                                <li><a class="dropdown-item" href="#">Offres du moment</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
-                              aria-controls="offcanvasExample">
-                              PANIER
-                            </a>
-                          </li>
-                    </ul>
 
-                    <div class="d-flex">
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Rechercher un article"
-                                aria-label="Search">
-                            <button class="btn2" type="submit">Rechercher</button>
-                        </form>
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    PROFIL
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Enregistrement</a></li>
-                                    <li><a class="dropdown-item" href="#">Connexion</a></li>
-                                    <li><a class="dropdown-item" href="#">Mon compte</a></li>
-                                    <li><a class="dropdown-item" href="#">Mes commandes</a></li>
-                                    <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
-                                    <li><a class="dropdown-item" href="#">Déconnexion</a></li>
-                                </ul>
+            <a class="navbar-brand" href="#">
+                <img class="img-fluid" alt="logo" src="img/logo2.JPG">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">ACCUEIL</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            JEUX
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="jeux-de-des.html" target="_blank" class="dropdown-item">Jeux de dés</a>
                             </li>
+                            <li><a class="dropdown-item" href="jeux-de-cartes.html" target="_blank">Jeux de
+                                    cartes</a></li>
+                            <li><a class="dropdown-item" href="jeux-de-plateau.html" target="_blank">Jeux de
+                                    plateaux</a></li>
                         </ul>
-                    </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            PROMOS
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
+                            <li><a class="dropdown-item" href="#">Offres du moment</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                            aria-controls="offcanvasExample">
+                            PANIER
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="d-flex">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Rechercher un article"
+                            aria-label="Search">
+                        <button class="btn2" type="submit">Rechercher</button>
+                    </form>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                PROFIL
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Enregistrement</a></li>
+                                <li><a class="dropdown-item" href="#">Connexion</a></li>
+                                <li><a class="dropdown-item" href="#">Mon compte</a></li>
+                                <li><a class="dropdown-item" href="#">Mes commandes</a></li>
+                                <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
+                                <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
+            </div>
             </div>
         </nav>
 
-        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+            aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasExampleLabel">Votre panier</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <h5 class="offcanvas-title" id="offcanvasExampleLabel">Votre panier</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-              <div>
-                <ul>
-                    <li>
-                      <p>Strike | 16€99</p>
-                    </li>
-                    <li>
-                      <p>7Wonders | 36€99</p>
-                    </li>
-                    <li>
-                      <p>Dobble | 14€99</p>
-                    </li>
-                  </ul>
-                  <p>Total : 68€97</p>
-                  <a href="commande.html" target="_blank"><button class="btn2">commande</button></a>
-              </div>
-              
+                <div>
+                    <ul>
+                        <li>
+                            <p>Strike | 16€99</p>
+                        </li>
+                        <li>
+                            <p>7Wonders | 36€99</p>
+                        </li>
+                        <li>
+                            <p>Dobble | 14€99</p>
+                        </li>
+                    </ul>
+                    <p>Total : 68€97</p>
+                    <a href="commande.html" target="_blank"><button class="btn2">commande</button></a>
+                </div>
+
             </div>
-          </div>
+        </div>
     </header>
 
     <main>
@@ -225,14 +226,9 @@
 
             </div>
 
-
-
-
-
         </section>
 
     </main>
-
 
     <div class="b-example-divider"></div>
     <div class="container">
@@ -250,6 +246,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+
 
 </body>
 
