--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img class="logo" src="img/logo2.JPG">
+          <img class="img-fluid" alt="logo" src="img/logo2.JPG">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,7 +66,7 @@
                   PROFIL
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Enregistrement</a></li>
+                  <li><a class="dropdown-item" href="enregistrement.html" target="_blank">Enregistrement</a></li>
                   <li><a class="dropdown-item" href="#">Connexion</a></li>
                   <li><a class="dropdown-item" href="#">Mon compte</a></li>
                   <li><a class="dropdown-item" href="#">Mes commandes</a></li>
@@ -122,7 +122,7 @@
           <div class="carousel-caption d-none d-md-block">
             <p class="offre">Offre de bienvenue</p>
             <p class="vingt">20% de réduction sur votre première commande</p>
-            <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+            <p><a class="btn btn-lg" href="enregistrement.html">Enregistrement</a></p>
           </div>
         </div>
 
@@ -193,6 +193,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+    <script src="s"></script>
 
 </body>
 
