--- a/profilOk.html
+++ b/profilOk.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's Play -Confirmation de profil</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/styleprofilOk.css">
+    <title>Let's Play - Enregistrement</title>
+
 </head>
+
 <body>
-    <h1>Votre enregistement a bien été pris en compte.</h1>
+
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-fluid" alt="logo" src="img/logo2.JPG">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">ACCUEIL</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                JEUX
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="jeux-de-des.html" target="_blank">Jeux de dés</a>
+                                </li>
+                                <li><a class="dropdown-item" href="jeux-de-cartes.html" target="_blank">Jeux de
+                                        cartes</a></li>
+                                <li><a class="dropdown-item" href="jeux-de-plateau.html" target="_blank">Jeux de
+                                        plateaux</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                PROMOS
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
+                                <li><a class="dropdown-item" href="#">Offres du moment</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                                aria-controls="offcanvasExample">
+                                PANIER
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="d-flex justify-content-center">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    PROFIL
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="profilOk.html">Enregistrement</a></li>
+                                    <li><a class="dropdown-item" href="#">Connexion</a></li>
+                                    <li><a class="dropdown-item" href="#">Mon compte</a></li>
+                                    <li><a class="dropdown-item" href="#">Mes commandes</a></li>
+                                    <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
+                                    <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <form class="d-flex flex-lg-row flex-sm-column" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Rechercher un article"
+                            aria-label="Search">
+                        <button class="btn" type="submit">Rechercher</button>
+                    </form>
+                </div>
+            </div>
+            </div>
+        </nav>
+    </header>
+
+
+    <div class="wrapper">
+    <h1>Votre profil a bien été pris en compte.</h1>
 
     <h2>Récapitulatif de vos informations :</h2>
 
@@ -15,15 +102,29 @@
     <p>Votre prénom: <span id="spanFirstName"></span></p>
     <p>Votre numéro de téléphone: <span id="spanNumberPhone"></span></p>
     <p>Votre adresse email: <span id="spanMail"></span></p>
-    <a href="enregistrement.html">retour</a>
+    <br>
+    <a href="index.html">Retourner à l'accueil</a>
+    </div>
+
+
+    <div class="b-example-divider"></div>
+    <div class="container">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            </ul>
+            <p class="text-center text-muted">&copy; 2023 Formation Afpa Dév Web et Web Mobile</p>
+        </footer>
+    </div>
 
 
 
-
-
-
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
     
     <script>
